[BED-146] Debug again
Took 5 minutes